--- a/paper.tex
+++ b/paper.tex
@@ -1,8 +1,14 @@
 \documentclass{article}
+\usepackage{natbib}
+
 \title{Title}
 \author{Rafael De Los Santo, Mahmoud Dolah}
 \date{November 20th, 2016}
+
 \begin{document}
 \maketitle
 Enter text here
+
+\bibliographystyle{abbrv}
+\bibliography{research}
 \end{document}
