Corrected comma  problem in author line

--- a/research.bib
+++ b/research.bib
@@ -1,12 +1,12 @@
 @article{fitnesstrackers2016, 
-    author = {M. Meier, D. Reinhardt, S. WendZel}, 
+    author = {M. Meier and D. Reinhardt and S. WendZel}, 
     title = {Attacks on Fitness Trackers Revisited: A Case-Study of Unfit Firmware Security},
     publisher = {Sicherheit}, 
     year = 2016 
 }
 
 @article{firmalice2015,
-    author = {Yan Shoshitaishvili, Ruoyu Wang, Christophe Hauser, Christopher Kruegel, Giovanni Vigna}, 
+    author = {Yan Shoshitaishvili and Ruoyu Wang and Christophe Hauser and Christopher Kruegel and Giovanni Vigna}, 
     title = {Firmalice - Automatic Detection of Authentication Bypass Vulnerabilities in Binary Firmware}, 
     publisher = {UC Santa Barbara}, 
     year = 2015
@@ -20,21 +20,21 @@
 }
 
 @article{staticdisassembly2002,
-    author = {Christopher Kruegel, William Robertson, Fredrik Valeur and Giovanni Vigna}, 
+    author = {Christopher Kruegel and William Robertson and Fredrik Valeur and Giovanni Vigna}, 
     title = {Static Disassembly of Obfuscated Binaries}, 
     publisher = {University of California Santa Barbara}, 
     year = 2002
 }
 
 @article{avatar,
-    author = {Jonas Zaddach, Luca Bruno, Auŕelien Francillon, Davide Balzarotti}, 
+    author = {Jonas Zaddach and Luca Bruno and Auŕelien Francillon and Davide Balzarotti}, 
     title = {Avatar: A Framework to Support Dynamic Security Analysis of Embedded Systems’ Firmwares}, 
-    publisher = {EURECOM}
+    publisher = {EURECOM}, 
     year = 2011
 }
 
 @article{analysisofembeddedfirmware2014,
-    author = {Andrei Costin, Jonas Zaddach, Auŕelien Francillon, Davide Balzarotti}, 
+    author = {Andrei Costin and Jonas Zaddach and Auŕelien Francillon and Davide Balzarotti}, 
     title = {A Large-Scale Analysis of the Security of Embedded Firmwares}, 
     publisher = {EURECOM}, 
     year = 2014
@@ -48,7 +48,7 @@
 
 @misc{wrt120N2014,
     title = {Reversing the WRT120N’s Firmware Obfuscation}, 
-    url = {http://www.devttys0.com/2014/02/reversing-the-wrt120n-firmware-obfuscation/}
+    url = {http://www.devttys0.com/2014/02/reversing-the-wrt120n-firmware-obfuscation/}, 
     author = {Craig Heffner}, 
     year = 2014
 }
@@ -60,14 +60,14 @@
 }
 
 @article{firmwaremodsattack,
-    author = {Ang Cui, Michael Costello and Salvatore J. Stolfo}, 
+    author = {Ang Cui and Michael Costello and Salvatore J. Stolfo}, 
     title = {When Firmware Modifications Attack:A Case Study of Embedded Exploitation}, 
     publisher = {Columbia University}
     
 }
 
 @book{analysisofplcfirmware2011,
-    author = {Zachry Basnight, Jonathan Butts, Juan Lopez, and Thomas Dube},
+    author = {Zachry Basnight and Jonathan Butts and Juan Lopez and Thomas Dube},
     title = {Analysis of Programmable Logic Controller Firmware for Threat Assessment and Forensic Investigation},
     year = 2011, 
     publisher = {Air Force Institute of Technology}, 
@@ -82,21 +82,21 @@
 }
 
 @article{dynamicanalysisatscale2015,
-    author = {Andrei Costin, Apostolis Zarras, Auŕelien Francillon}, 
+    author = {Andrei Costin and Apostolis Zarras and Auŕelien Francillon}, 
     title = {Automated Dynamic Firmware Analysis at Scale: A Case Study on Embedded Web Interfaces}, 
     publisher = {EURECOM},
     year = 2015
 }
 
 @article{fie2013,
-    author = {Drew Davidson, Benjamin Moench, Somesh Jha, and Thomas Ristenpart}, 
+    author = {Drew Davidson and Benjamin Moench and Somesh Jha and Thomas Ristenpart}, 
     title = {FIE on Firmware: Finding Vulnerabilities in Embedded Systems using Symbolic Execution}, 
     publisher = {University of Wisconsin - Madison},
     year = 2013
 }
 
 @article{klee2008,
-    author = {Cristian Cadar, Daniel Dunbar, Dawson Engler},
+    author = {Cristian Cadar and Daniel Dunbar and Dawson Engler},
     title = {KLEE: Unassisted and Automatic Generation of High-Coverage Tests for Complex Systems Programs}, 
     publisher = {Stanford University},
     year = 2008
