Fixed format to that of usenix standards

--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -1,14 +1,23 @@
-\documentclass[12pt]{article}
-\usepackage{natbib}
-
-\title{Firmware Entry Points in Memory}
-\author{Mahmoud Dolah and Rafael De Los Santo}
-\date{November 20th, 2016}
-
+\documentclass[letterpaper,twocolumn,10pt]{article}
+\usepackage{epsfig,endnotes,natbib}
 \begin{document}
+
+\title{\Large \bf Firmware Entry Points in Memory}
+\author{
+    {\rm Mahmoud Dolah}\\
+    NYU Tandon School of Engineering
+    \and
+    {\rm Rafael De Los Santo}\\
+    NYU Tandon School of Engineering
+}
+
+\date{}
+
 \maketitle
 
-\section{Abstract}
+\thispagestyle{empty}
+
+\subsection*{Abstract}
 
 \section{Introduction}
 
