Made background, problem, and in this paper parts of abstract

--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -18,6 +18,7 @@
 \thispagestyle{empty}
 
 \subsection*{Abstract}
+Finding the entry points of firmware in memory is a problem that is featured prominently in many embedded systems. It is hard to find out because the method for it is not standardized and, since firmware works under the operating system, it does not follow the same rules that the OS uses. In this paper, we present an approach for automating the process of finding the entry point of firmware in memory. 
 
 \section{Introduction}
 
