Corrected spelling of author's name (my bad Raf)

--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -7,7 +7,7 @@
     {\rm Mahmoud Dolah}\\
     NYU Tandon School of Engineering
     \and
-    {\rm Rafael De Los Santo}\\
+    {\rm Rafael De Los Santos}\\
     NYU Tandon School of Engineering
 }
 
