Explained firmware, and base addresses

--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -43,9 +43,7 @@ Firmware is a type of software that provides control over products and systems. 
 
 Firmware is considered difficult to operate on because it acts under the operating system and does not have uniform standards and guidelines. Also, in some cases, firmware represents a security vulnerability because, unlike most modern operating systems, firmware rarely has an automatic mechanism for updating itself\cite{firmwaresecurity2014}. 
 
-
-
-WHY FINDING BASE ADDRESS IS IMPORTANT? 
+The base address is an absolute address that acts as a reference point for other addresses. Finding the base address is important for fully disassembling firmware in order to create a full analysis of a system. 
 
 \section{Design}
 
