Corrected spelling mistake on line 29

--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -26,7 +26,7 @@ Unlike other areas of modern consumer computing, embeded systems suffer from a g
 
 When conducting an analysis of a firmware image, we often start with trying to find the base address of the binary. Because no tools (or even methods) exist that apply to a wide range of firmware binaries, and considering it is quite possible that information on the architecture of the device is sparse or poorly documented, researches often have to rely on manual, static analysis. This, in part, also has to do with the fact that quite often the source hardware isn't available, so reliable dynamic analysis is usually out of the question. When attempting to do an analysis on a large body of firmware binaries, like for instance the Open Wrt library, it would almost be impossible to expect a researcher to obtain, and run some kind of dynamic analysis on, every single phsysical device.
 
-What follows includes disassembly in some commercial tool (perhaps IDA Pro), followed by a manual analysis of the disasembly for potential base addresses. This is, of course, error prone and time consuming.
+What follows includes disassembly in some commercial tool (perhaps IDA Pro), followed by a manual analysis of the disassembly for potential base addresses. This is, of course, error prone and time consuming.
 
 Locating the base address of a firmware image opens the door for a wide variety of more in-depth analysis techniques, so it is imperitive that a robust and wide spread solution is discovered. Coppola\cite{cloudscale2013} proposes a method, basefind.py, that we believe has much promise, and could one day we generalized to support images across a wide range of architectures. Currently, Coppola has used it to succesfully locate the base address of one image, so work will now turn to evaluating this technique on other images and other architures.
 
