--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -46,7 +46,7 @@ Heffner\cite{wrt120N2014} and Viehbock\cite{braindump2011} show examples of stat
 Other techniques have been developed to target specific device vulnerabilities, rather than overarching analyses of firmware images. Meier\cite{fitnesstrackers2016} and Cui et al\cite{firmwaremodsattack} focus on the exploitation of firmware updates to deliver malicious code (to fitness trackers and HP printers, respectively), and note a general lacking in the current state of firmware security. Similarly, FIE\cite{fie2013} is a tool developed to find bugs in the MSP430 family of micro controllers, building off of Cadar et al\cite{klee2008} for the purposes of conducting symbolic execution. While these analyses are limited in scope, they all shed light into interesting ways of inspecting firmware that can potentially be applied to a greater and more general range of devices. 
 
 \section{Background}
-Firmware is a type of software that provides control over products and systems. In this paper, the firmware we analyzed is called openwrt, which is piece of firmware for routers. A router is an example of an embedded system. An embedded system is a computer system that acts with a dedicated function within a larger system.               
+Firmware is a type of software that provides control over products and systems. In this paper, the firmware we analyzed is called OpenWrt, which is piece of firmware for routers. A router is an example of an embedded system. An embedded system is a computer system that acts with a dedicated function within a larger system.               
 
 Firmware is considered difficult to operate on because it acts under the operating system and does not have uniform standards and guidelines. Also, in some cases, firmware represents a security vulnerability because, unlike most modern operating systems, firmware rarely has an automatic mechanism for updating itself\cite{firmwaresecurity2014}. 
 
@@ -60,9 +60,9 @@ Basefind.py, created by Coppola\cite{cloudscale2013}, is a relatively small pyth
 Of course, this does not remove the need for manual analysis. A person still needs to evaluate each of these base address candidates to see if there is a match, and it is possible that all 20 could be negative. Assuming there is a match, Basefind.py does however drastically reduce the amount of time an analyst needs to spend on this first step. 
 
 \section{Implementation}
-Coppola\cite{cloudscale2013} originally tested Basefind.py on an arm binary. Our analysis attempts to run the same script on other binaries to evaluate whether or not this is a useful method towards generalizing Coppola's approach. Our sample space of binaries includes Coppola's original binary and MIPS binaries from Open WRT. Specifically, some of the MIPS binaries from Open WRT were compiled in elf format, which is helpful for decompiling and checking the results of Basefind.py.
+Coppola\cite{cloudscale2013} originally tested Basefind.py on an arm binary. Our analysis attempts to run the same script on other binaries to evaluate whether or not this is a useful method towards generalizing Coppola's approach. Our sample space of binaries includes Coppola's original binary and MIPS binaries from Open WRT. Specifically, some of the MIPS binaries from Open WRT were compiled in ELF format, which is helpful for decompiling and checking the results of Basefind.py.
 
-Each binary was scanned with Basefind.py. For binaries compiled to elf, the resulting base addresses were checked against a readelf decompilation. Running Basefind.py on non-elf binaries was still useful to evaluate the runtime of Basefind.py.
+Each binary was scanned with Basefind.py. For binaries compiled to ELF, the resulting base addresses were checked against a readelf decompilation. Running Basefind.py on non-ELF binaries was still useful to evaluate the runtime of Basefind.py.
 
 \section{Evaluation}
 
