Fixed $ error by adding \ before every '-' and '_'

--- a/firmwareEntryPointsInMemory.tex
+++ b/firmwareEntryPointsInMemory.tex
@@ -66,13 +66,13 @@ Each binary was scanned with Basefind.py. For binaries compiled to ELF, the resu
 \section{Evaluation}
 The following table shows the results of running Basefind.py on our selected files.
 
-->Table here [File name, basefind results, size of file, time to execute, readelf base address (if exists)]
+Table here: File name, basefind results, size of file, time to execute, readelf base address if exists
 
-The results from running Basefind.py on our selected files were less useful than we originaly expected. Notice that for most of the files, Basefind.py found candidate base addresses that referenced at most 3 strings. The results for openwrt-ar71xx-generic-nbg460n_550n_550nh-u-boot.bin, however, more closely resembled Coppola's results, but because that file was not in elf format we were not able to easily verify the validity of any of the candidate addresses. 
+The results from running Basefind.py on our selected files were less useful than we originally expected. Notice that for most of the files, Basefind.py found candidate base addresses that referenced at most 3 strings. The results for openwrt\-ar71xx\-generic\-nbg460n\_550n\_550nh\-u\-boot.bin, however, more closely resembled Coppola's results, but because that file was not in ELF format we were not able to easily verify the validity of any of the candidate addresses. 
 
-The running time of Basefind.py is also of relative concern. While running Basefind.py on openwrt-ar71xx-generic-nbg460n_550n_550nh-u-boot.bin took only 2 hours, executing it on all other files took over 10 hours, with openwrt-ar71xx-generic-vmlinux-lzma.elf taking almost 28 hours. We speculated originally that Basefind.py could be incorperated into other static analysis tools as an intial step in their process, but its slow running times would make it difficult for large scale analysis. 
+The running time of Basefind.py is also of relative concern. While running Basefind.py on openwrt\-ar71xx\-generic\-nbg460n\_550n\_550nh\-u\-boot.bin took only 2 hours, executing it on all other files took over 10 hours, with openwrt\-ar71xx\-generic\-vmlinux\-lzma.elf taking almost 28 hours. We speculated originally that Basefind.py could be incorperated into other static analysis tools as an intial step in their process, but its slow running times would make it difficult for large scale analysis. 
 
-The final step of our evaluation of Basefind.py was to test the validity of its results. In the case of openwrt-ar71xx-generic-vmlinux-lzma.elf, analysing the file with readelf yielded different results for its potential base address. Reasons as to why this may be the case are discussed below.
+The final step of our evaluation of Basefind.py was to test the validity of its results. In the case of openwrt\-ar71xx\-generic\-vmlinux\-lzma.elf, analysing the file with readelf yielded different results for its potential base address. Reasons as to why this may be the case are discussed below.
 
 \section{Discussion}
 The results from our analysis with Basefind.py show unfortunate shortcomings when using it as an approach to determining the entrypoints of firmware images. While the runtime of Basefind.py is worrying, our true concern comes from the apparent inaccuracy of its results. We believe this may be because Basefind.py was created for determining the base address of a specific ARM binary, while we tested it on binaries of other architectures. Basefind.py may be relying on specific structures or artifacts found within binaries for ARM that simply do not exist in other formats. Because Basefind.py was successful in Coppola's case, it may be possible to generalize the approach.
