Added years to rest of sources

--- a/research.bib
+++ b/research.bib
@@ -44,6 +44,7 @@
     title = {Binwalk},
     url = {binwalk.org}, 
     author = {Craig Heffner}
+    year = 2012
 }
 
 @misc{wrt120N2014,
@@ -63,6 +64,7 @@
     author = {Ang Cui and Michael Costello and Salvatore J. Stolfo}, 
     title = {When Firmware Modifications Attack:A Case Study of Embedded Exploitation}, 
     publisher = {Columbia University}
+    year = 2012
     
 }
 
